--- a/style.css
+++ b/style.css
@@ -55,7 +55,17 @@
         box-shadow: 0px 4px 4px 0px #00000040;
         margin-bottom: 120px;
     }
+}
 
-
+@media (min-width:768px){
+    .navbar{
+        display: flex;
+        justify-content: center;
+        margin-top: 44px;   
+    }
+    
+    .navbar a{
+        margin-right: 23px;
+    }
 }
 
