--- a/style.css
+++ b/style.css
@@ -66,6 +66,70 @@
     
     .navbar a{
         margin-right: 23px;
+        font-size: 20px;
+        font-weight: 600;
+        color: #989D9C;
+        margin-top: 8px;
+    }
+
+    .navbar button{
+        width: 130px;
+        height: 41px;
+        border-radius: 21px;
+        font-size: 20px;
+        color: #FFFFFF;
+        font-weight: 600;
+        background-color: #665AE1;
+    }
+
+    main{
+        display: flex;
+        flex-flow: column wrap;
+        align-items: center;
+    }
+
+    aside img{
+        width: 568px;
+        margin-top: 20px;
+        margin-bottom: 30px;
+    }
+
+    section{
+        text-align: left;
+        margin-left: 50px;
+    }
+
+    section h1{
+        font-size: 80px;
+        font-weight: 800;
+        color: #515151;
+    }
+
+    section h2{
+        font-size: 40px;
+        font-weight: 500;
+        color: #515151;
+    }
+
+    section p{
+        text-align: justify;
+        font-size: 20px;
+        line-height: 30px;
+        padding-right: 246px;
+        margin-top: 32px;
+        margin-bottom: 50px;
+    }
+
+    section button{
+        width: 239px;
+        height: 64px;
+        border-radius: 50px;
+        background-color: #ADFF00;
+        font-size: 28px;
+        color: #000000;
+        font-weight: 700;
+        box-shadow: 0px 4px 4px 0px #00000040;
+        margin-bottom: 120px;
     }
 }
 
