--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@
     border: none;
 }
 
-@media (max-width:765px){
+@media (min-width:300px) and (max-width:765px){
     header{
         display: none;
     }
@@ -57,7 +57,7 @@
     }
 }
 
-@media (min-width:768px){
+@media (min-width:768px) and (max-width:1112px){
     .navbar{
         display: flex;
         justify-content: center;
@@ -130,6 +130,84 @@
         font-weight: 700;
         box-shadow: 0px 4px 4px 0px #00000040;
         margin-bottom: 120px;
+    }
+}
+
+@media (width:1114px){
+    .navbar{
+        display: flex;
+        justify-content: flex-start;
+        margin-left: 76px;
+        margin-top: 44px;
+    }
+
+    .navbar a{
+        margin-right: 23px;
+        font-size: 20px;
+        font-weight: 600;
+        color: #989D9C;
+        margin-top: 8px;
+    }
+
+    .navbar a:nth-child(5){
+        margin-left:5.5rem;
+    }
+
+    .navbar button{
+        width: 130px;
+        height: 41px;
+        border-radius: 21px;
+        font-size: 20px;
+        color: #FFFFFF;
+        font-weight: 600;
+        background-color: #665AE1;
+    }
+
+    main{
+        display: flex;
+        align-items: center;
+    }
+
+    aside img{
+        width: 488px;
+        margin-left: 35px;
+        margin-top: 44px; 
+    }
+
+    section{
+        padding-left: 86px;
+    }
+
+    section h1{
+        font-size: 80px;
+        font-weight: 800;
+        color: #515151;
+    }
+
+    section h2{
+        font-size: 40px;
+        font-weight: 500;
+        color: #515151;
+    }
+
+    section p{
+        text-align: justify;
+        font-size: 20px;
+        line-height: 30px;
+        padding-right: 46px;
+        margin-top: 12px;
+        margin-bottom: 30px;
+    }
+
+    section button{
+        width: 239px;
+        height: 64px;
+        border-radius: 50px;
+        background-color: #ADFF00;
+        font-size: 28px;
+        color: #000000;
+        font-weight: 700;
+        box-shadow: 0px 4px 4px 0px #00000040;
     }
 }
 
